--- a/animação.html
+++ b/animação.html
@@ -128,7 +128,7 @@
             position: absolute;
             top: 512px;
             left: 798px; 
-            animation:flash 5s;
+            animation:flash 5s infinite linear;
            font-size: 25px;
            font-weight: bold
         }
