--- a/animação.html
+++ b/animação.html
@@ -53,7 +53,7 @@
             position: absolute;
             top: 0px;
             left: 0px; 
-            animation:chocolate01 7s infinite linear;
+            animation:chocolate01 7s infinite linear alternate;
         }
         @keyframes chocolate01
         {
