--- a/páginalogin.html
+++ b/páginalogin.html
@@ -128,7 +128,7 @@
     </div>
 
     <div class="botao">
-        <a href="paginacadastro.html">
+        <a href="páginacadastro.html">
         Cadrastre-se
     </a>
          
