--- a/paginainicial.html
+++ b/paginainicial.html
@@ -121,6 +121,17 @@
                  </div>
              </div>
             </div>
+
+            <div class="linha3">
+                <img src="tortamorango.png" width="280px" height="350px">
+                <div class="infotorta">
+                   <b>TORTA DE MORANGO </b> 
+                    <div class="precotorta">
+                       <b>R$13,00</b>
+                    </div>
+                </div>
+
+            </div>
         </div>
         
     </div>
