--- a/paginainicial.html
+++ b/paginainicial.html
@@ -8,7 +8,8 @@
     <title>Pagina inicial</title>
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link rel="stylesheet" href="estilo_inicial.css">
-    <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="principal">
