--- a/paginainicial.html
+++ b/paginainicial.html
@@ -75,7 +75,7 @@
             
   
         </div>
-            <img class="logo" src="cupcake.png"   > 
+            <img class="logo" src="cupcake.png" width="250px"  > 
 
             <div class="propaganda">
                     <div class="linha1">
@@ -112,4 +112,8 @@
         </div>
     </div>
 </body>
+<script>
+
+    
+</script>
 </html>
