--- a/index.html
+++ b/index.html
@@ -40,4 +40,12 @@
 
     
 </body>
+<script>
+    temporizador=setTimeout(Abrir,7000)
+    function Abrir()
+    {
+        window.open("paginalogin.html","_self")
+    }
+    
+</script>
 </html>
