--- a/paginaescolha.html
+++ b/paginaescolha.html
@@ -100,7 +100,10 @@
                     <input class= "number" type="number">
                 </fieldset>
                 <br>
-                    <button class="addcarrinho"> <b>ADICIONAR AO CARRINHO 🛒</b></button> 
+                     
+                    <a href="paginacarrinho.html">
+                        <button class="addcarrinho"> <b>ADICIONAR AO CARRINHO 🛒</b></button> 
+                    </a>
                 </div>
     
                </div>
