--- a/paginainicial.html
+++ b/paginainicial.html
@@ -9,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link rel="stylesheet" href="estilo_inicial.css">
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="jquery.js"></script>
 
 </head>
@@ -168,10 +169,14 @@
                 <div class="linha2">
                     <b> OS MAIS PEDIDOS </b>
                     <b> <span class="fora"> NÃO FIQUE DE FORA </span> </b>
-                    <IMG SRC="SININHO.png" width="300PX">
+                    <div class="sininho1">
+                        <img src="SININHO.png" width="80%">
+                    </div>
                     <div class="emoji">
                         <b>GARANTA O SEU </b>
                         <img src="EMOJI.png" width="50px">
+                   
+                    </div>
                     
                     </div>
                 </div>
