--- a/paginasalgados.html
+++ b/paginasalgados.html
@@ -124,7 +124,7 @@
 
 
                     <div class="img_legenda" id="pão de queijo">
-                        <img onclick="adicionar('brownie');"src="PÃO DE QUEIJO 02.JPG"width="250px" height="320px" >
+                        <img onclick="adicionar('pão de queijo');"src="PÃO DE QUEIJO 02.JPG"width="250px" height="320px" >
                         <div class="preco">
                             <b>PÃO DE QUEIJO</b>
                             <b>R$4,00</b>
