--- a/paginalogin.html
+++ b/paginalogin.html
@@ -19,7 +19,7 @@
     
      <fieldset class="fieldset1">
             <legend><b>EMAIL</b> </legend>
-            <input type="text">
+            <input type="email">
      </fieldset>
             <br> 
     <fieldset class="fieldset1">
