--- a/paginacadastro.html
+++ b/paginacadastro.html
@@ -19,11 +19,11 @@
         <div class="bordacad">
             <fieldset class="fieldset1">
                  <legend><b>LOGIN</b> </legend>
-                 <input type="text">
+                 <input type="email">
             </fieldset>
             <fieldset class="fieldset1">
                 <legend> <b>SENHA</b></legend>
-                <input type="text">
+                <input type="password">
             </fieldset>
         </div>
         <div class="botao">
