--- a/paginainicial.html
+++ b/paginainicial.html
@@ -91,13 +91,13 @@
             
                 <div class="propaganda">
                     <div class="linha2">
-                        <b> OS MAIS PEDIDOS </b>
-                        <b> <span class="fora"> NÃO FIQUE DE FORA </span> </b>
+                        <b> OS MAIS PEDIDOS: </b>
+                        <b> <span class="fora"> NÃO FIQUE DE FORA... </span> </b>
                         <div class="sininho1">
                             <img src="SININHO.png" width="80%">
                         </div>
                         <div class="emoji">
-                            <b>GARANTA O SEU </b>
+                            <b>GARANTA O SEU! </b>
                             <img src="EMOJI.png" width="50px">
                    
                         </div>
