--- a/paginaescolha.html
+++ b/paginaescolha.html
@@ -8,6 +8,7 @@
     <title>Pagina escolha</title>
     <link rel="stylesheet" href="estilo_escolha.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
     
 <body>
