--- a/paginalogin.html
+++ b/paginalogin.html
@@ -18,24 +18,24 @@
             <h1>FAÇA SEU LOGIN:</h1>
     
      <fieldset class="fieldset1">
-            <legend><b>EMAIL</b> </legend>
-            <input type="email">
+            <legend><b>EMAIL:</b> </legend>
+            <input class="caixa" type="text">
      </fieldset>
             <br> 
     <fieldset class="fieldset1">
-            <legend> <b>SENHA</b></legend>
-            <input type="password">
+            <legend> <b>SENHA:</b></legend>
+            <input class="caixa" type="password">
     </fieldset>
     <br>
         <div class="D3">
             <button class="botao">
             <a href="paginainicial.html">
-            ENTRAR 
+            <b>ENTRAR</b> 
              </a>
             </button>
              <button class="botao">
                 <a href="paginacadastro.html">
-                CADASTRAR-SE
+                <b>CADASTRAR-SE</b>
                  </a>
         </button>
 
