--- a/paginacadastro.html
+++ b/paginacadastro.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="Website Icon" type="png"
+    href="minilogo1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAGINACADASTRO</title>
     <link rel="stylesheet" href="estilo_cadastro.css">
