--- a/paginacarrinho.html
+++ b/paginacarrinho.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Website Icon" type="png"
+    href="minilogo1.png">
     <title>Pagina carrinho</title>
     <link rel="stylesheet" href="estilo_carrinho.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
