--- a/paginaescolha.html
+++ b/paginaescolha.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina escolha</title>
+    <link rel="Website Icon" type="png"
+    href="minilogo1.png">
+    <title>Personalize Seu pedido</title>
     <link rel="stylesheet" href="estilo_escolha.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
