--- a/paginalogin.html
+++ b/paginalogin.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAGINALOGIN</title>
+    <link rel="Website Icon" type="png"
+    href="minilogo1.png">
+    <title>Página de login</title>
   
         <link rel="stylesheet" href="estilo_login.css"/>
    
