--- a/paginaperfil.html
+++ b/paginaperfil.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina perfil</title>
+    <link rel="Website Icon" type="png"
+    href="minilogo1.png">
+    <title>Seu Perfil</title>
     <link rel="stylesheet" href="estilo_perfil.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
