--- a/paginahistorico.html
+++ b/paginahistorico.html
@@ -39,7 +39,7 @@
              </div>
              <div class="D4">
                 <a href="Paginalocalização.html">
-                <img  title="Ver Localização" src="localização.png" width="40px" height="40px"> 
+                <img title="The Inclusive Bakery"src="localização.png" width="40px" height="40px"> 
                 </a> 
                 
              </div>
