--- a/paginainicial.html
+++ b/paginainicial.html
@@ -32,7 +32,7 @@
     
                     </div>
                      <div class="D4">
-                        <div title="Ver Localização" class="interior"></div>
+                        <div title="The Inclusive Bakery" class="interior"></div>
                         <a href="Paginalocalização.html">
                         <img  src="localização.png" width="40px" height="40px"> 
                         </a> 
