--- a/animaçãomoto.html
+++ b/animaçãomoto.html
@@ -10,8 +10,16 @@
     <link rel="stylesheet" href="estilo_moto.css">
 </head>
 <body>
-    <div class="entrega">
-    <img class="motoboy" src="motoboy.gif">
-</div>
+    <div class="pedido">
+        <b>SEU PEDIDO FOI EFETUADO COM SUCESSO!🧁</b> 
+         <div class="pedido2">
+            agradecemos a sua preferência!
+         </div>
+     </div>
+     <img class="logo" src="cupcake.png">
+     <img class="motoca" src="motoca.gif">
+     <div class="pontinhos">
+         ...............
+     </div>
 </body>
 </html>
