--- a/paginapagamento.html
+++ b/paginapagamento.html
@@ -139,13 +139,15 @@
                     <b>R$15,00</b>
                 </div>
                 <div class="btt">
-                    <button id="comprar" onclick="Comprar();" class="confirmaPAG">
+                    <a href="animaçãomoto.html">
+                        <button id="comprar" onclick="Comprar();"class="confirmaPAG"></button>
                         <b><span
-                    id="confirm">CONFIRMAR
-                </span></b>
-
-                  <img class="img_ok" id="img_ok" src="correto.png">
+                            id="confirm">CONFIRMAR
+                        </span></b>
+                        <img class="img_ok" id="img_ok" src="correto.png">
                     </button>
+                    
+                </a>
                 </div>
                 
             </div>
