--- a/paginacadastro.html
+++ b/paginacadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="Website Icon" type="png"
-    href="minilogo1.png">
+    href="img/minilogo1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAGINACADASTRO</title>
     <link rel="stylesheet" href="estilo_cadastro.css">
@@ -14,7 +14,7 @@
 <body>
     <div class="d1">
       <div class="cadastro">
-        <img class="logo" src="novalogo.png"  width="170px" >
+        <img class="logo" src="img/novalogo.png"  width="170px" >
         <br> <br> 
         <b class="letrascadastro">FAÇA SEU LOGIN:</b>
         <br> <br>
