--- a/paginalogin.html
+++ b/paginalogin.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Website Icon" type="png"
-    href="minilogo1.png">
+    href="img/minilogo1.png">
     <title>Página de login</title>
   
         <link rel="stylesheet" href="estilo_login.css"/>
@@ -16,7 +16,7 @@
 
     <div class="D1">
         <div class="D2">
-            <img class="logo" src="novalogo.png" width="180px">
+            <img class="logo" src="img/novalogo.png" width="180px">
             <h1>FAÇA SEU LOGIN:</h1>
     
      <fieldset class="fieldset1">
