--- a/paginasuporte.html
+++ b/paginasuporte.html
@@ -13,7 +13,7 @@
     <div class="principal"> 
         <div class="img">
             <a href="paginainicial.html">
-                  <img title="Ir Para Página Inicial"  src="cupcake.png" width="250px"> 
+                  <img title="Ir Para Página Inicial"  src="img/cupcake.png" width="250px"> 
            </a>
            
          
