--- a/adm.html
+++ b/adm.html
@@ -12,16 +12,16 @@
 <body>
     <div class="botoes">
         <div  class="botao1">
-            <img title="Pesquisar" class="lupa" src="pesquisar.png" width="50px">
+            <img title="Pesquisar" class="lupa" src="img/pesquisar.png" width="50px">
         </div>
         <div  class="botao2">
-            <img title="Remover" class="lixeira" src="lixeira.png">
+            <img title="Remover" class="lixeira" src="img/lixeira.png">
         </div>
         <div  class="botao3">
-            <img title="Inserir" class="inserir" src="inserir.png">
+            <img title="Inserir" class="inserir" src="img/inserir.png">
         </div>
         <div  class="botao4">
-            <img title="Alterar" class="alterar" src="alterar.png">
+            <img title="Alterar" class="alterar" src="img/alterar.png">
         </div>
 
     </div>
@@ -76,7 +76,7 @@
       </div>
 
       <div class="caixadetexto">
-        <img class="logo" src="novalogo.png" width="150px">
+        <img class="logo" src="img/novalogo.png" width="150px">
         <br>
         <div class="texto">
             <B> ÁREA ADMINISTRATIVA</B>
