--- a/animaçãomoto.html
+++ b/animaçãomoto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Website Icon" type="png"
-    href="minilogo1.png">
+    href="img/minilogo1.png">
     <title>Enviaremos seu pedido</title>
     <link rel="stylesheet" href="estilo_moto.css">
 </head>
@@ -16,8 +16,8 @@
             agradecemos a sua preferência!
          </div>
      </div>
-     <img class="logo" src="cupcake.png">
-     <img class="motoca" src="motoca.gif">
+     <img class="logo" src="img/cupcake.png">
+     <img class="motoca" src="img/motoca.gif">
      <div class="pontinhos">
          ...............
      </div>
