--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Website Icon" type="png"
-    href="minilogo1.png">
+    href="img/minilogo1.png">
     <title>ANIMAÇÃO</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -17,12 +17,12 @@
 
         </div>
 
-        <img class="logo" src="cupcake.png"  > 
-    <img class="chocolate" src="cobertura de chocolate.png"  width="800px" >
-    <img class="chocolate2" src="cobertura de chocolate.png"  width="800px" >  
-    <img class="abelinha" src="abelinha2.gif"  width="200px" >
-    <img class="fundomarrom" src="fundomarrom.png"  width="1000px" >
-    <img class="fundomarrom2" src="fundomarrom.png"  width="1000px" >
+        <img class="logo" src="img/cupcake.png"  > 
+    <img class="chocolate" src="img/cobertura de chocolate.png"  width="800px" >
+    <img class="chocolate2" src="img/cobertura de chocolate.png"  width="800px" >  
+    <img class="abelinha" src="img/abelinha2.gif"  width="200px" >
+    <img class="fundomarrom" src="img/fundomarrom.png"  width="1000px" >
+    <img class="fundomarrom2" src="img/fundomarrom.png"  width="1000px" >
 
     
     <div class="loading">
