--- a/html/animaçãomoto.html
+++ b/html/animaçãomoto.html
@@ -7,7 +7,7 @@
     <link rel="Website Icon" type="png"
     href="img/minilogo1.png">
     <title>Enviaremos seu pedido</title>
-    <link rel="stylesheet" href="estilo_moto.css">
+    <link rel="stylesheet" href="../estilo_moto.css">
 </head>
 <body>
     <div class="pedido">
@@ -16,8 +16,8 @@
             agradecemos a sua preferência!
          </div>
      </div>
-     <img class="logo" src="img/cupcake.png">
-     <img class="motoca" src="img/motoca.gif">
+     <img class="logo" src="../img/cupcake.png">
+     <img class="motoca" src="../img/motoca.gif">
      <div class="pontinhos">
          ...............
      </div>
