--- a/html/paginacadastro.html
+++ b/html/paginacadastro.html
@@ -8,13 +8,13 @@
     href="img/minilogo1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAGINACADASTRO</title>
-    <link rel="stylesheet" href="estilo_cadastro.css">
+    <link rel="stylesheet" href="../estilo_cadastro.css">
     
 </head>
 <body>
     <div class="d1">
       <div class="cadastro">
-        <img class="logo" src="img/novalogo.png"  width="170px" >
+        <img class="logo" src="../img/novalogo.png"  width="170px" >
         <br> <br> 
         <b class="letrascadastro">FAÇA SEU LOGIN:</b>
         <br> <br>
