--- a/html/paginainicial.html
+++ b/html/paginainicial.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../estilo_inicial.css">
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <script src="jquery.js"></script>
+    <script src="../jquery.js"></script>
 
 </head>
 <body>
