--- a/html/paginadoces.html
+++ b/html/paginadoces.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Website Icon" type="png"
-    href="img/minilogo1.png">
+    href="../img/minilogo1.png">
     <title>Cardápio Doces</title>
     <link rel="stylesheet" href="../estilo_doces.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
