--- a/html/Paginalocalização.html
+++ b/html/Paginalocalização.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Website Icon" type="png"
-    href="img/minilogo1.png">
+    href="../img/minilogo1.png">
     <title>Sobre nós</title>
-    <link rel="stylesheet" href="../estilo_localização.css">
+    <link rel="stylesheet" href="../css/estilo_localização.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
