--- a/html/paginainicial.html
+++ b/html/paginainicial.html
@@ -10,7 +10,7 @@
     href="../img/minilogo1.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
-    <link rel="stylesheet" href="../estilo_inicial.css">
+    <link rel="stylesheet" href="../css/estilo_inicial.css">
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="../jquery.js"></script>
