--- a/html/paginalogin.html
+++ b/html/paginalogin.html
@@ -9,7 +9,7 @@
     href="../img/minilogo1.png">
     <title>Página de login</title>
   
-        <link rel="stylesheet" href="../estilo_login.css"/>
+        <link rel="stylesheet" href="../css/estilo_login.css"/>
    
 </head>
 <body>
