--- a/html/animaçãomoto.html
+++ b/html/animaçãomoto.html
@@ -7,7 +7,7 @@
     <link rel="Website Icon" type="png"
     href="img/minilogo1.png">
     <title>Enviaremos seu pedido</title>
-    <link rel="stylesheet" href="../estilo_moto.css">
+    <link rel="stylesheet" href="../css/estilo_moto.css">
 </head>
 <body>
     <div class="pedido">
