--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <title>ANIMAÇÃO</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-   <link rel="stylesheet" href="../estilo_index.css">
+   <link rel="stylesheet" href="../css/estilo_index.css">
 </head>
 <body>
     <div class=" principal">
