--- a/html/paginacadastro.html
+++ b/html/paginacadastro.html
@@ -8,7 +8,7 @@
     href="img/minilogo1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAGINACADASTRO</title>
-    <link rel="stylesheet" href="../estilo_cadastro.css">
+    <link rel="stylesheet" href="../css/estilo_cadastro.css">
     
 </head>
 <body>
