--- a/html/paginacarrinho.html
+++ b/html/paginacarrinho.html
@@ -8,7 +8,7 @@
     <link rel="Website Icon" type="png"
     href="img/minilogo1.png">
     <title>Pagina carrinho</title>
-    <link rel="stylesheet" href="../estilo_carrinho.css">
+    <link rel="stylesheet" href="../css/estilo_carrinho.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
     
