--- a/html/paginadoces.html
+++ b/html/paginadoces.html
@@ -8,7 +8,7 @@
     <link rel="Website Icon" type="png"
     href="../img/minilogo1.png">
     <title>Cardápio Doces</title>
-    <link rel="stylesheet" href="../estilo_doces.css">
+    <link rel="stylesheet" href="../css/estilo_doces.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
