--- a/html/paginaescolha.html
+++ b/html/paginaescolha.html
@@ -8,7 +8,7 @@
     <link rel="Website Icon" type="png"
     href="../img/minilogo1.png">
     <title>Personalize Seu pedido</title>
-    <link rel="stylesheet" href="../estilo_escolha.css">
+    <link rel="stylesheet" href="../css/estilo_escolha.css">
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
