--- a/html/paginapagamento.html
+++ b/html/paginapagamento.html
@@ -11,7 +11,7 @@
     <link
     rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet'>
-    <link rel="stylesheet" href="../estilo_pagamento.css">
+    <link rel="stylesheet" href="../css/estilo_pagamento.css">
     <link href="https://fonts.googleapis.com/css2?family=Freehand&family=Pinyon+Script&display=swap" rel="stylesheet">
     <script src="../jquery.js"></script>
 </head>
