--- a/html/adm.html
+++ b/html/adm.html
@@ -6,22 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAGINACADASTROADM</title>
-    <link rel="stylesheet" href="estilo_adm.css">
+    <link rel="stylesheet" href="../css/estilo_adm.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="botoes">
         <div  class="botao1">
-            <img title="Pesquisar" class="lupa" src="img/pesquisar.png" width="50px">
+            <img title="Pesquisar" class="lupa" src="../img/pesquisar.png" width="50px">
         </div>
         <div  class="botao2">
-            <img title="Remover" class="lixeira" src="img/lixeira.png">
+            <img title="Remover" class="lixeira" src="../img/lixeira.png">
         </div>
         <div  class="botao3">
-            <img title="Inserir" class="inserir" src="img/inserir.png">
+            <img title="Inserir" class="inserir" src="../img/inserir.png">
         </div>
         <div  class="botao4">
-            <img title="Alterar" class="alterar" src="img/alterar.png">
+            <img title="Alterar" class="alterar" src="../img/alterar.png">
         </div>
 
     </div>
@@ -76,7 +76,7 @@
       </div>
 
       <div class="caixadetexto">
-        <img class="logo" src="img/novalogo.png" width="150px">
+        <img class="logo" src="../img/novalogo.png" width="150px">
         <br>
         <div class="texto">
             <B> ÁREA ADMINISTRATIVA</B>
