--- a/html/paginacadastro.html
+++ b/html/paginacadastro.html
@@ -21,11 +21,11 @@
         <div class="bordacad">
             <fieldset class="fieldset1">
                  <legend><b>LOGIN</b> </legend>
-                 <input type="email">
+                 <input type="email" name="login">
             </fieldset>
             <fieldset class="fieldset1">
                 <legend> <b>SENHA</b></legend>
-                <input type="password">
+                <input type="password" name="senha">
             </fieldset>
         </div>
         <div class="botao">
@@ -39,19 +39,19 @@
         <b class="letraspessoais"> DADOS PESSOAIS:</b>
         <fieldset class="fieldset2">
             <legend><b> NOME </b> </legend>
-            <input type="text">
+            <input type="text" name="nome">
        </fieldset>
        <fieldset class="fieldset2">
            <legend> <b>CPF</b></legend>
-           <input type="text">
+           <input type="text" name="cpf">
         </fieldset>
         <fieldset class="fieldset2">
            <legend><b>TELEFONE</b> </legend>
-            <input type="text">
+            <input type="text" name="telefone">
        </fieldset>
        <fieldset class="fieldset2">
            <legend> <b>DATA DE NASCIMENTO</b></legend>
-           <input type="date">
+           <input type="date" name="aniversario">
        </fieldset>
       </div>
 
@@ -59,27 +59,27 @@
         <b class="letraspessoais"> DADOS DO ENDEREÇO:</b>
         <fieldset class="fieldset3">
             <legend><b> CEP </b> </legend>
-            <input type="text">
+            <input type="text" name="cep">
        </fieldset>
        <fieldset class="fieldset3">
            <legend> <b>ESTADO</b></legend>
-           <input type="text">
+           <input type="text"name="estado">
         </fieldset>
         <fieldset class="fieldset3">
            <legend><b>CIDADE</b> </legend>
-            <input type="text">
+            <input type="text" name="cidade">
        </fieldset>
        <fieldset class="fieldset3">
            <legend> <b>BAIRRO/LOUGRADORO</b></legend>
-           <input type="text">
+           <input type="text" name="bairro">
        </fieldset>
        <fieldset class="fieldset3">
         <legend> <b>NÚMERO</b></legend>
-        <input type="number">
+        <input type="number" name="numero">
     </fieldset>
     <fieldset class="fieldset3">
         <legend> <b>COMPLEMENTO</b></legend>
-        <input type="text">
+        <input type="text" name="complemento">
     </fieldset>
       </div>
     </div>
