--- a/html/paginacadastro.html
+++ b/html/paginacadastro.html
@@ -24,11 +24,11 @@
             <fieldset class="fieldset1">
 
                  <legend><b>EMAIL</b> </legend>
-                 <input type="email" name="email">
+                 <input  class="caixa" type="email" name="email">
             </fieldset>
             <fieldset class="fieldset1">
                 <legend> <b>SENHA</b></legend>
-                <input type="password" name="senha">
+                <input  class="caixa" type="password" name="senha">
             </fieldset>
         </div>
        
@@ -39,19 +39,19 @@
         <b class="letraspessoais"> DADOS PESSOAIS:</b>
         <fieldset class="fieldset2">
             <legend><b> NOME </b> </legend>
-            <input type="text" name="nome">
+            <input class="caixa2" type="text" name="nome">
        </fieldset>
        <fieldset class="fieldset2">
            <legend> <b>CPF</b></legend>
-           <input type="text" name="cpf">
+           <input  class="caixa2" type="text" name="cpf">
         </fieldset>
         <fieldset class="fieldset2">
            <legend><b>TELEFONE</b> </legend>
-            <input type="text" name="telefone">
+            <input  class="caixa2" type="text" name="telefone">
        </fieldset>
        <fieldset class="fieldset2">
            <legend> <b>DATA DE NASCIMENTO</b></legend>
-           <input type="date" name="aniversario">
+           <input  class="caixa2" type="date" name="aniversario">
        </fieldset>
       </div>
 
@@ -59,27 +59,27 @@
         <b class="letraspessoais"> DADOS DO ENDEREÇO:</b>
         <fieldset class="fieldset3">
             <legend><b> CEP </b> </legend>
-            <input type="text" name="cep">
+            <input  class="caixa3" type="text" name="cep">
        </fieldset>
        <fieldset class="fieldset3">
            <legend> <b>ESTADO</b></legend>
-           <input type="text"name="estado">
+           <input  class="caixa3" type="text"name="estado">
         </fieldset>
         <fieldset class="fieldset3">
            <legend><b>CIDADE</b> </legend>
-            <input type="text" name="cidade">
+            <input  class="caixa3" type="text" name="cidade">
        </fieldset>
        <fieldset class="fieldset3">
            <legend> <b>BAIRRO/LOUGRADORO</b></legend>
-           <input type="text" name="bairro">
+           <input  class="caixa3" type="text" name="bairro">
        </fieldset>
        <fieldset class="fieldset3">
         <legend> <b>NÚMERO</b></legend>
-        <input type="number" name="numero">
+        <input  class="caixa3" type="number" name="numero">
     </fieldset>
     <fieldset class="fieldset3">
         <legend> <b>COMPLEMENTO</b></legend>
-        <input type="text" name="complemento">
+        <input  class="caixa3" type="text" name="complemento">
     </fieldset>
       </div>
     </div>
