--- a/html/paginainicial.html
+++ b/html/paginainicial.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="D6">
                         <div title="Ver Perfil" class="interior"></div>
-                        <a href="paginaperfil.html">
+                        <a href="../paginaperfil.php">
                         <img   src="../img/perfil.png" width="70px" height="70px"> 
                         </a> 
                         
