--- a/html/paginasalgados.html
+++ b/html/paginasalgados.html
@@ -33,7 +33,7 @@
                 
              </div>
              <div class="D6">
-                <a href="paginaperfil.html">
+                <a href="../paginaperfil.php">
                 <img  title="Ver Perfil" src="../img/perfil.png" width="70px" height="70px"> 
                 </a> 
                 
