--- a/html/index.html
+++ b/html/index.html
@@ -14,15 +14,12 @@
 <body>
     <div class=" principal">
         <div class="fundo">
+            <div class="carregando"></div>
 
         </div>
 
-        <img class="logo" src="../img/cupcake.png"  > 
-    <img class="chocolate" src="../img/cobertura de chocolate.png"  width="800px" >
-    <img class="chocolate2" src="../img/cobertura de chocolate.png"  width="800px" >  
-    <img class="abelinha" src="../img/abelinha2.gif"  width="200px" >
-    <img class="fundomarrom" src="../img/fundomarrom.png"  width="1000px" >
-    <img class="fundomarrom2" src="../img/fundomarrom.png"  width="1000px" >
+        <img class="logo" src="../img/minilogo1 - Copia.png"  > >  
+   
 
     
     <div class="loading">
@@ -43,7 +40,7 @@
     
 </body>
 <script>
-    temporizador=setTimeout(Abrir,7000)
+    temporizador=setTimeout(Abrir,3000)
     function Abrir()
     {
         window.open("paginalogin.html","_self")
