--- a/html/paginadoces.html
+++ b/html/paginadoces.html
@@ -163,7 +163,7 @@
                    
                    
                     <div class="botãoescolha">
-                        <a href="paginaescolha.html" class="btn btn-white btn-        animate">Personalizar pedido</a>
+                        <a href="..paginaescolha.php" class="btn btn-white btn-        animate">Personalizar pedido</a>
                     </div>
                     </div>
 
