--- a/html/paginasalgados.html
+++ b/html/paginasalgados.html
@@ -200,7 +200,7 @@
         }
         else
         {
-            clicks=0
+            clicks=1
             document.getElementById("empadinha").style.borderStyle = "none"
             document.getElementById("pastel de frango").style.borderStyle = "none"
             document.getElementById("pão de forma").style.borderStyle = "none"
@@ -208,6 +208,9 @@
             document.getElementById("mini coxinhas").style.borderStyle = "none"
             document.getElementById("pão de queijo").style.borderStyle = "none"
             document.getElementById("mini pizza").style.borderStyle = "none"
+
+            document.getElementById(produto).style.borderColor="green"
+            document.getElementById(produto).style.borderStyle = "solid"
 
 
 
