--- a/html/paginadoces.html
+++ b/html/paginadoces.html
@@ -212,13 +212,13 @@
         else
         {
             clicks=1
-            document.getElementById("empadinha").style.borderStyle = "none"
-            document.getElementById("pastel de frango").style.borderStyle = "none"
-            document.getElementById("pão de forma").style.borderStyle = "none"
-            document.getElementById("misto quente").style.borderStyle = "none"
-            document.getElementById("mini coxinhas").style.borderStyle = "none"
-            document.getElementById("pão de queijo").style.borderStyle = "none"
-            document.getElementById("mini pizza").style.borderStyle = "none"
+            document.getElementById("bolo_chocolate").style.borderStyle = "none"
+            document.getElementById("sonho recheado").style.borderStyle = "none"
+            document.getElementById("chocolate quente").style.borderStyle = "none"
+            document.getElementById("cookie").style.borderStyle = "none"
+            document.getElementById("torta de morango").style.borderStyle = "none"
+            document.getElementById("brownie").style.borderStyle = "none"
+            document.getElementById("torta de framboesa").style.borderStyle = "none"
 
             document.getElementById(produto).style.borderColor="green"
             document.getElementById(produto).style.borderStyle = "solid"
